k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cmsknf
  labels:
    name: cmsknf
    app: knowledge-nexus-framework
